# thutil

./: .gitignore  404.html  LICENSE.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: changelog-ci.yml  changelog_ci.yml  mkdocs_deploy_ghpage.yml  pytest.yaml  release.yaml  release_pypi.yaml  release_whl_purePython.yaml  test.yaml
_docs/: api.md  dispatcher.md  index.md  io.md  path.md  pkg.md  sth2sth.md  stuff.md
api/: index.html
general/: index.html
io/: index.html
search/: search_index.json
sth2sth/: index.html
test/: test_stuff.py
thutil/: __init__.py  __version.py  config.py  dispatcher.py  io.py  path.py  pkg.py  sth2sth.py  stuff.py
